--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ langchain==0.2.0
 langchain-google-genai==0.0.8
 langchain-core==0.1.48
 gdown==5.2.0
-google-generativeai
+google-generativeai==0.3.2
+
