--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-streamlit==1.34.0
-google-generativeai==0.4.1
-gTTS==2.5.1
-pytesseract==0.3.10
-Pillow==10.3.0
-python-dotenv==1.0.1
-langchain==0.2.0
-langchain-google-genai==0.0.8
-langchain-core==0.1.48
-gdown==5.2.0
-google-generativeai==0.3.2
-
+streamlit
+google-generativeai
+langchain
+gtts
+pytesseract
+Pillow
+python-dotenv
